CSS fix for more menu on mobile in lightbox

--- a/src/ui/less/layout/actions.less
+++ b/src/ui/less/layout/actions.less
@@ -285,6 +285,18 @@
 
     }
 
+    .fpd-wrapper.fpd-layout-small {
+
+        [data-pos="right"] {
+
+            .fpd-dropdown-menu {
+                transform: translate(50%, 5px);
+            }
+
+        }
+
+    }
+
 }
 
 .fpd-wrapper.fpd-layout-small {
